RESOLVED FIXED67957
Possible ASSERT(!storageTracker) in Lazily Initialized StorageTracker
https://bugs.webkit.org/show_bug.cgi?id=67957
Summary Possible ASSERT(!storageTracker) in Lazily Initialized StorageTracker
Joseph Pecoraro
Reported 2011-09-12 15:14:09 PDT
StorageTracker::initializeTracker ASSERTs: ASSERT(!storageTracker); However that global static could have been initialized by a call to StorageTracker::tracker. We should instead ASSERT that the tracker doesn't exist yet (we create it here) or if it does exist that it doesn't yet have a client (which is what initialize is doing).
Attachments
[PATCH] Proposed Fix (2.16 KB, patch)
2011-09-12 16:37 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2011-09-12 16:37:47 PDT
Created attachment 107110 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 2 2011-09-12 16:38:46 PDT
Darin Adler
Comment 3 2011-09-12 16:46:19 PDT
Comment on attachment 107110 [details] [PATCH] Proposed Fix Seems fine.
WebKit Review Bot
Comment 4 2011-09-12 21:40:49 PDT
Comment on attachment 107110 [details] [PATCH] Proposed Fix Clearing flags on attachment: 107110 Committed r95013: <http://trac.webkit.org/changeset/95013>
WebKit Review Bot
Comment 5 2011-09-12 21:40:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.