Possible ASSERT(!storageTracker) in Lazily Initialized StorageTracker https://bugs.webkit.org/show_bug.cgi?id=67957

Reviewed by Darin Adler.

The storageTracker singleton may already have been created
through StorageTracker::tracker before initializeTracker
gets called. Update the ASSERT in this case to check that
there is no client for the tracker.

No test, this depends on how the port initializes the tracker.

* storage/StorageTracker.cpp:
(WebCore::StorageTracker::initializeTracker):


Canonical link: https://commits.webkit.org/83897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95013 268f45cc-cd09-0410-ab3c-d52691b4dbfc